--- a/tempmail/templates/base.html
+++ b/tempmail/templates/base.html
@@ -1,6 +1,9 @@
 {% load static %}
+{% load i18n %}
+{% get_current_language as LANGUAGE_CODE %}
+
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="{{ LANGUAGE_CODE }}">
 
 <head>
   {% include "parciais/_head.html" %}
@@ -21,7 +24,6 @@
   {% endblock %}
 
   {% include 'parciais/_toast.html' %}
-
   {% include 'parciais/_footer.html' %}
 
   <script src="{% static 'js/global/toggleTheme.js' %}"></script>
