--- a/tempmail/templates/parciais/_erros_forms.html
+++ b/tempmail/templates/parciais/_erros_forms.html
@@ -1,3 +1,5 @@
+{% load i18n %}
+
 {% if form.errors %}
 <div class="flex flex-col gap-2 mb-6 animate-in fade-in slide-in-from-top-4 duration-500">
     {% for field in form %}
@@ -6,7 +8,8 @@
                 <i class="fa-solid fa-circle-exclamation text-red-600 dark:text-red-400"></i>
                 <div class="flex flex-col">
                     <span class="text-xs font-black uppercase tracking-wider text-red-700 dark:text-red-400">
-                        Erro em {{ field.label }}
+                        {# Usamos blocktrans para permitir a inserção da variável dentro da tradução #}
+                        {% blocktrans with label=field.label %}Erro em {{ label }}{% endblocktrans %}
                     </span>
                     <span class="text-sm text-red-600 dark:text-red-300">
                         {{ error|escape }}
