--- a/tempmail/templates/parciais/_qrPopover.html
+++ b/tempmail/templates/parciais/_qrPopover.html
@@ -1,3 +1,5 @@
+{% load i18n %}
+
 <div id="qrContent" class="hidden fixed z-[100] transition-all">
     <div
         class="absolute -top-1.5 left-1/2 -translate-x-1/2 w-3.5 h-3.5 bg-white dark:bg-gray-800 rotate-45 border-l border-t border-gray-100 dark:border-gray-700 z-10">
@@ -11,7 +13,9 @@
             </div>
 
             <div class="flex flex-col items-center">
-                <span class="text-[10px] font-bold text-gray-400 uppercase tracking-widest">Escaneie seu email</span>
+                <span class="text-[10px] font-bold text-gray-400 uppercase tracking-widest">
+                    {% trans "Escaneie seu email" %}
+                </span>
                 <span class="text-sm font-black text-orange-600 uppercase tracking-tighter">
                     Email<span class="text-gray-900 dark:text-white">Rush</span>
                 </span>
